$Id: ChangeLog,v 1.15 2003-06-10 20:26:38 wilsonp Exp $
	
Version 2.6.???
	
BUGS FIXED
	* Fixed indexing of average energy vector for decay types [PW] (06/10/2003)
        * Multiplication of importance and gamma source for bio dose
          calculation is reversed to account for order of gp struc [AV] (6/03/03) 
        * Bio dose results are now divided by detector volume (hence
          new input parameter needed for bio dose request line) [AV] (6/03/03) 
        * Modified bio dose calculation to use volume instead 
          of uservol [AV] (3/25/03) 	
        * Change parameter passed to Result::write so that uservol is 
	  correctly processed [AV] (09/18/2002)	
	* Util/input.C:tokentype() - token conversion to lower case only
	  changed first character [AV] (08/13/2002)
        * Command-line argument handling: when extra argument expected (-v, -t)
	  for last option but not given, casuses SEGFAULT (core dump).  Check
	  for last command-line option and error. [AV] (09/09/2002)
	* Fixed units for contact dose [PW] (01/13/2003)
	

NEW FEATURES
	* Direct reading of RTFLUX by ALARA [MF] (08/23/02)
	* Read user-defined total volume in 'loading' input block. [AV] (09/09/2002)
	* Use user-defined total volume with special 'units' entry of
	  output block to give volume integrated results. [AV] (09/09/2002)
        * Adjoint dose calculation for volume resolution [AV] (12/02/2002)

CODE UPDATES
	* Update for addition of software for producing collaboration 
	  graphs in doxygen called 'dot'  [PW] (08/11/2002)
	* Changed code to use GNU autoconf/make, etc... [EK,PW] (01/06/2003)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.6.0
	
* Start of ChangeLog (08/08/2002)

BUGS FIXED


NEW FEATURES
	* Squeeze multiple zeros out of ALARALib [PW] (08/09/2002) 
	  THIS WILL REQUIRE CHANGE IN MINOR REVISION NUMBER


CODE UPDATES
	* All class comments converted to Doxygen compliance
	* Added target to Makefile to make documentation with Doxygen