@@ -1,4 +1,4 @@
-/* $Id: IEAFLib.C,v 1.7 2002-07-25 15:33:46 wilsonp Exp $ */
+/* $Id: IEAFLib.C,v 1.8 2003-06-12 17:00:28 wilsonp Exp $ */
 #include "IEAFLib.h"
 #include "DataLib/ALARALib/ALARALib_def.h"
 
@@ -7,8 +7,8 @@ IEAFLib::IEAFLib(char *transFname, char *decayFname, char *alaraFname)
 {
   if (transFname != NULL && decayFname != NULL)
     {
-      inTrans.open(transFname, ios::in);
-      inDecay.open(decayFname, ios::in);
+      inTrans.open(searchPath(transFname), ios::in);
+      inDecay.open(searchPath(decayFname), ios::in);
 
       makeBinLib(alaraFname);
     }
