@@ -1,8 +1,13 @@
-#$Id: Makefile.am,v 1.3 2003-01-08 05:21:54 wilsonp Exp $
+#$Id: Makefile.am,v 1.4 2003-06-12 17:00:29 wilsonp Exp $
 noinst_LIBRARIES = libUtil.a
 
 libUtil_a_SOURCES = Matrix.C  Statistics.C  debug.C  input.C  math.C  output.C  stub.C
 
-noinst_HEADERS = Matrix.h  Statistics.h  classes.h  debug.h  functions.h  input_tokens.h
+noinst_HEADERS = Matrix.h  Statistics.h  classes.h  debug.h  functions.h  input_tokens.h dflt_datadir.h
 
 INCLUDE = -I@top_srcdir@/
+
+# Set the installation data directory
+DISTCLEANFILES = dflt_datadir.h
+dflt_datadir.h: Makefile
+	echo '#define DFLT_DATADIR "$(datadir)"' >$@
